# Mira_Seraphs

./: .env.template  .gitignore  README.md  Untitled Diagram.drawio  demo_complete.py  pyproject.toml  quickstart_test.py  requirements.txt  test_person_a.py
agents/: __init__.py
agents/person_a/: __init__.py  data_manager.py  simulation_engine.py  telemetry_ingest.py
agents/person_b/: __init__.py  fingerprinting.py  heatmap_visualization.py  wavefield_physics.py
agents/person_c/: __init__.py  explanation.py  fleet_matching.py
agents/person_d/: __init__.py  master_orchestrator.py  ui_agent.py
data/diagnostic_runs/: manifest.json
data/diagnostic_runs/demo_complete_001/: demo_complete_001_report.txt  results.json
data/diagnostic_runs/quickstart_complete/: results.json
data/quickstart_runs/: manifest.json
data/quickstart_runs/quickstart_002/: results.json
data/simulated_runs/: manifest.json
docs/: DOWNLOAD_GUIDE.md  EXTERNAL_DATA_GUIDE.md  QUICKSTART.md  sill.md
schemas/: __init__.py  json_examples.py  message_schema.py  state_schema.py  tool_outputs.py
scripts/: download_datasets.sh
simulation/: __init__.py  fault_models.py  run_generator.py  sensor_simulation.py  vehicle_model.py
ui/: diagnostics.html  fleet.html  index.html  performance.html
ui/assets/: car.glb
