[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mira-wave"
version = "0.1.0"
description = "Multi-Agent Resonance Intelligence & Vibration Analysis Engine for Automotive Fault Diagnosis"
authors = [
    {name = "Priyesh Srivastava", email = "priyesh@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["automotive", "fault-diagnosis", "physics", "multi-agent", "langgraph", "vibration-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "google-generativeai>=0.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
ui = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/priyesh/mira-wave"
Documentation = "https://github.com/priyesh/mira-wave/docs"
Repository = "https://github.com/priyesh/mira-wave"

[tool.setuptools]
packages = ["agents", "langgraph", "simulation", "tools", "schemas"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=agents --cov=langgraph --cov=simulation --cov=tools"
